--- a/.classpath
+++ b/.classpath
@@ -2,14 +2,18 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/Users/josephcappadona/Downloads/java-json.jar"/>
-	<classpathentry kind="lib" path="/Users/josephcappadona/Downloads/json-simple-1.1.1 (1).jar"/>
-	<classpathentry kind="lib" path="/Users/josephcappadona/Downloads/httpcomponents-client-4.3.6/lib/commons-codec-1.6.jar"/>
-	<classpathentry kind="lib" path="/Users/josephcappadona/Downloads/httpcomponents-client-4.3.6/lib/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="/Users/josephcappadona/Downloads/httpcomponents-client-4.3.6/lib/fluent-hc-4.3.6.jar"/>
-	<classpathentry kind="lib" path="/Users/josephcappadona/Downloads/httpcomponents-client-4.3.6/lib/httpclient-4.3.6.jar"/>
-	<classpathentry kind="lib" path="/Users/josephcappadona/Downloads/httpcomponents-client-4.3.6/lib/httpclient-cache-4.3.6.jar"/>
-	<classpathentry kind="lib" path="/Users/josephcappadona/Downloads/httpcomponents-client-4.3.6/lib/httpcore-4.3.3.jar"/>
-	<classpathentry kind="lib" path="/Users/josephcappadona/Downloads/httpcomponents-client-4.3.6/lib/httpmime-4.3.6.jar"/>
+	<classpathentry kind="lib" path="commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="fluent-hc-4.4.jar"/>
+	<classpathentry kind="lib" path="httpclient-4.4.jar"/>
+	<classpathentry kind="lib" path="httpclient-cache-4.4.jar"/>
+	<classpathentry kind="lib" path="httpclient-win-4.4.jar"/>
+	<classpathentry kind="lib" path="httpcore-4.4.jar"/>
+	<classpathentry kind="lib" path="httpmime-4.4.jar"/>
+	<classpathentry kind="lib" path="java-json.jar"/>
+	<classpathentry kind="lib" path="jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="reddit app plans"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
